# ddd-marketplace

./: Cargo.toml  README.md
marketplace-api/: Cargo.toml
marketplace-api/src/: classified_ad.rs  main.rs  traits.rs
marketplace-contracts/: Cargo.toml
marketplace-contracts/src/: lib.rs
marketplace-domain/: Cargo.toml
marketplace-domain/src/: classified_ad.rs  events.rs  lib.rs  ports.rs  simple_types.rs  user_profile.rs
marketplace-framework/: Cargo.toml
marketplace-framework/src/: lib.rs
