[package]
name = "marketplace-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.29"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
marketplace-contracts = { path = "../marketplace-contracts" }
marketplace-domain = { path = "../marketplace-domain" }
lazy_static = "1.4.0"