[package]
name = "marketplace-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0.0", features = ["v4", "serde"] }
serde_derive = "1.0.136"
serde = "1.0.136"
# marketplace-domain = { path = "../marketplace-domain" }
