[package]
name = "marketplace-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
libmath = "0.2.1"
uuid = { version = "1.0.0", features = ["v4"] }
lazy_static = "1.4.0"
marketplace-framework = { path = "../marketplace-framework" }
